--- a/City_Bikes_Data.ipynb
+++ b/City_Bikes_Data.ipynb
@@ -109,8 +109,10 @@
     }
    ],
    "source": [
-    "# Creating connection to datasets through urls from citi-bike data\n",
-    "urls = [\"https://s3.amazonaws.com/tripdata/201703-citibike-tripdata.csv.zip\"]\n",
+    "# Creating connection to datasets through urls from citi-bike data for 2020\n",
+    "urls = [\"https://s3.amazonaws.com/tripdata/JC-201912-citibike-tripdata.csv.zip\",\n",
+    "       \"https://s3.amazonaws.com/tripdata/JC-202001-citibike-tripdata.csv.zip\",\n",
+    "       ]\n",
     "\n",
     "\n",
     "# Defining the variable to hold the datasets from the urls\n",
