--- a/City_Bikes_Data_zip.ipynb
+++ b/City_Bikes_Data_zip.ipynb
@@ -42,73 +42,73 @@
       "--_curl_--https://s3.amazonaws.com/tripdata/202001-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 50.9M  100 50.9M    0     0  26.1M      0  0:00:01  0:00:01 --:--:-- 26.1M\n",
+      "100 50.9M  100 50.9M    0     0  37.5M      0  0:00:01  0:00:01 --:--:-- 37.5M\n",
       "\n",
       "[2/12]: https://s3.amazonaws.com/tripdata/202002-citibike-tripdata.csv.zip --> 202002-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202002-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 47.2M  100 47.2M    0     0  35.6M      0  0:00:01  0:00:01 --:--:-- 35.6M\n",
+      "100 47.2M  100 47.2M    0     0  39.8M      0  0:00:01  0:00:01 --:--:-- 39.8M\n",
       "\n",
       "[3/12]: https://s3.amazonaws.com/tripdata/202003-citibike-tripdata.csv.zip --> 202003-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202003-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 44.4M  100 44.4M    0     0  31.1M      0  0:00:01  0:00:01 --:--:-- 31.1M\n",
+      "100 44.4M  100 44.4M    0     0  42.2M      0  0:00:01  0:00:01 --:--:-- 42.2M\n",
       "\n",
       "[4/12]: https://s3.amazonaws.com/tripdata/202004-citibike-tripdata.csv.zip --> 202004-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202004-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 28.7M  100 28.7M    0     0  20.7M      0  0:00:01  0:00:01 --:--:-- 20.7M\n",
+      "100 28.7M  100 28.7M    0     0  45.0M      0 --:--:-- --:--:-- --:--:-- 44.9M\n",
       "\n",
       "[5/12]: https://s3.amazonaws.com/tripdata/202005-citibike-tripdata.csv.zip --> 202005-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202005-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 62.3M  100 62.3M    0     0  38.0M      0  0:00:01  0:00:01 --:--:-- 38.0M\n",
+      "100 62.3M  100 62.3M    0     0  51.3M      0  0:00:01  0:00:01 --:--:-- 51.3M\n",
       "\n",
       "[6/12]: https://s3.amazonaws.com/tripdata/202006-citibike-tripdata.csv.zip --> 202006-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202006-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 79.5M  100 79.5M    0     0  35.6M      0  0:00:02  0:00:02 --:--:-- 35.6M\n",
+      "100 79.5M  100 79.5M    0     0  48.5M      0  0:00:01  0:00:01 --:--:-- 48.5M\n",
       "\n",
       "[7/12]: https://s3.amazonaws.com/tripdata/202007-citibike-tripdata.csv.zip --> 202007-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202007-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 89.7M  100 89.7M    0     0  40.0M      0  0:00:02  0:00:02 --:--:-- 40.0M\n",
+      "100 89.7M  100 89.7M    0     0  46.4M      0  0:00:01  0:00:01 --:--:-- 46.4M   0  48.1M      0  0:00:01  0:00:01 --:--:-- 48.1M\n",
       "\n",
       "[8/12]: https://s3.amazonaws.com/tripdata/202008-citibike-tripdata.csv.zip --> 202008-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202008-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 99.4M  100 99.4M    0     0  41.2M      0  0:00:02  0:00:02 --:--:-- 41.2M\n",
+      "100 99.4M  100 99.4M    0     0  45.5M      0  0:00:02  0:00:02 --:--:-- 45.5M\n",
       "\n",
       "[9/12]: https://s3.amazonaws.com/tripdata/202009-citibike-tripdata.csv.zip --> 202009-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202009-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  106M  100  106M    0     0  40.5M      0  0:00:02  0:00:02 --:--:-- 40.5M    0  40.2M      0  0:00:02  0:00:02 --:--:-- 40.2M\n",
+      "100  106M  100  106M    0     0  51.0M      0  0:00:02  0:00:02 --:--:-- 51.0M\n",
       "\n",
       "[10/12]: https://s3.amazonaws.com/tripdata/202010-citibike-tripdata.csv.zip --> 202010-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202010-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 97.1M  100 97.1M    0     0  39.5M      0  0:00:02  0:00:02 --:--:-- 39.4M\n",
+      "100 97.1M  100 97.1M    0     0  52.7M      0  0:00:01  0:00:01 --:--:-- 52.6M\n",
       "\n",
       "[11/12]: https://s3.amazonaws.com/tripdata/202011-citibike-tripdata.csv.zip --> 202011-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202011-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 75.0M  100 75.0M    0     0  43.5M      0  0:00:01  0:00:01 --:--:-- 43.5M\n",
+      "100 75.0M  100 75.0M    0     0  51.7M      0  0:00:01  0:00:01 --:--:-- 51.8M\n",
       "\n",
       "[12/12]: https://s3.amazonaws.com/tripdata/202012-citibike-tripdata.csv.zip --> 202012-citibike-tripdata.csv.zip\n",
       "--_curl_--https://s3.amazonaws.com/tripdata/202012-citibike-tripdata.csv.zip\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 47.2M  100 47.2M    0     0  41.3M      0  0:00:01  0:00:01 --:--:-- 41.3M\n",
+      "100 47.2M  100 47.2M    0     0  47.3M      0 --:--:-- --:--:-- --:--:-- 47.2M\n",
       "Archive:  202004-citibike-tripdata.csv.zip\n",
       "  inflating: 202004-citibike-tripdata.csv  \n",
       "\n",
@@ -149,6 +149,17 @@
       "\n",
       "12 archives were successfully processed.\n"
      ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'SList' object has no attribute 'to_csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-0162dd9974e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Saving joined table into output folder:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Resources'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'SList' object has no attribute 'to_csv'"
+     ]
     }
    ],
    "source": [
@@ -156,7 +167,10 @@
     "!curl -O \"https://s3.amazonaws.com/tripdata/2020[01-12]-citibike-tripdata.csv.zip\"\n",
     "!unzip '*.zip'\n",
     "!rm *.zip\n",
-    "files = !ls *.csv"
+    "files = !ls *.csv\n",
+    "\n",
+    "# Saving joined table into output folder:\n",
+    "files.to_csv('Resources', index=False)"
    ]
   },
   {
